# Test

./: README.md
GmmBackGround/: CMakeLists.txt  GmmBG
GmmBackGround/include/: CameraParam.hpp
GmmBackGround/src/: main.cpp
videoGrub/: CMakeLists.txt  videoGrub
videoGrub/include/: CameraCtl.hpp  CameraParam.hpp
videoGrub/src/: CameraCtl.cpp  main.cpp
